table operations view on mobile fixed

--- a/src/static/css/app.css
+++ b/src/static/css/app.css
@@ -847,6 +847,7 @@ footer{
 
 .operation{
   padding: 10px;
+  word-break: break-all;
 }
 
 .link{
